--- a/_data/pageconfig/our-solutions.yml
+++ b/_data/pageconfig/our-solutions.yml
@@ -13,19 +13,19 @@ members:
     name: Technical Training
     image_src: &site_url /assets/img/illustrations/custom/full-stack-development.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/full-stack-development.jpg 2x
-    url: &site_url /our-solutions/technical-training-solutions
+    url: &site_url /our-solutions/technical-training
     role: Upskill with confidence &#128588;
   
+  -
+    name: Quantitative Training
+    image_src: &site_url /assets/img/illustrations/training/quantitative-development.jpg
+    image_srcset: &site_url /assets/img/illustrations/training/quantitative-development.jpg 2x
+    url: &site_url /our-solutions/quantitative-training
+    role: Make informed decisions &#128065;
+
   -
     name: Strategic Advisory
     image_src: &site_url /assets/img/illustrations/custom/solutions-workforce-optimisation.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-workforce-optijmisation.jpg 2x
     url: &site_url /our-solutions/strategic-advisory-solutions
     role: Leverage our experience &#129417;
-  
-  -
-    name: Engagement Models
-    image_src: &site_url /assets/img/illustrations/custom/solutions-business-analytics.jpg
-    image_srcset: &site_url /assets/img/illustrations/custom/solutions-business-analytics.jpg 2x
-    url: &site_url /our-solutions/engagement-models
-    role: How we work with clients &#129309;
