updated taglines in index yaml

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -2,7 +2,8 @@
 #tagline_main: Accelerated Digital Transformation,<br />
 #tagline_main: Accelerated Digital Transformation,<br />
 tagline_main: Unlock Your Digital Transformation,<br />
-tagline_dynamic: at reduced CapEx, at optimal OpEx, at infinite scale, on your terms 🎯
+#tagline_dynamic: at reduced CapEx, at optimal OpEx, at infinite scale, on your terms 🎯
+tagline_dynamic: at low cost, and infinite scale, on your terms 🎯
 tagline_dynamic_delay: 75
 #tagline_cta: Paying too much for licensing? Need a bespoke solution without the vendor lock-in? Considering the Cloud but lack the in-house expertise?
 tagline_cta: Paying too much for too little? Need a bespoke solution without the vendor lock-in? Considering the Cloud but lack the in-house expertise?
