updated footer nav links in yaml and template

--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -284,7 +284,7 @@
   children:
     -
       name: Our Vision
-      url: /company-vision
+      url: /our-vision
       enabled: true
     -
       name: The Team
