--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -294,3 +294,11 @@
       name: Our Partners
       url: /our-partners
       enabled: true
+    -
+      name: Privacy Policy
+      url: /privacy-policy
+      enabled: true
+    -
+      name: Cookie Policy
+      url: /cookie-policy
+      enabled: true
