--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ _site
 _posts
 _drafts
 docs
+mailchimp-form.html
 assets/img/partners/cintra*
 assets/img/partners/original
 assets/img/photos/custom
