--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -214,7 +214,7 @@
   name: Case Studies
   url: /case-studies
   current: false
-  enabled: true
+  enabled: false
   has_children: true
   multi_column: false
   has_subchildren: false
@@ -291,6 +291,10 @@
       url: /meet-the-team
       enabled: true
     -
-      name: Our Partners
+      name: Partners
       url: /our-partners
+      enabled: true
+    -
+      name: Contact Us
+      url: /contact
       enabled: true
