updated baseurl references for deployment

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
 exclude:
   - .jekyll-cache
 
-url: http://localhost:4000
+#url: http://localhost:4000
+url: https://axopstech.github.io
 title: AxOps Technologies
 address: Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.
-email: hola@axops.tech
-tagline: "pending"
-description: "pending"
-contact_form_action_endpoint: https://tech.us17.list-manage.com/subscribe/post?u=14840a8116fc972efb3519035&amp;id=375c5195d2&amp;v_id=4165&amp;f_id=005e57e0f0
+email: 
 
 nav_logo: &url /assets/img/axops-134x26.png
 nav_logo2x: &url /assets/img/axops-134x26@2x.png 2x
@@ -30,7 +28,7 @@ social:
   name: AxOps
   links:
     - https://twitter.com/_insert_handle_here_
-    - https://www.linkedin.com/in/_insert_handle_here_
+    - https://www.linkedin.com/company/axops/
     - https://github.com/axopstech
 
 show_downloads: false
