--- a/_data/pageconfig/our-solutions.yml
+++ b/_data/pageconfig/our-solutions.yml
@@ -1,6 +1,7 @@
 tagline_intro: Our Solutions
 tagline_main: Unlock Your Organisations's Digital Transformation with AxOps™
-site_url: https://localhost:4000
+#site_url: https://localhost:4000
+site_url: https://axopstech.github.io
 members:
   -
     name: Technology Consulting
