--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -1,6 +1,7 @@
 tagline_intro: Meet the AXOPS&#8482; Team
 tagline_main: Our battle-tested, international, multi-disciplinary talent pool.
-site_url: https://localhost:4000
+#site_url: https://localhost:4000
+site_url: https://axopstech.github.io
 members:
   -
     name: Eriz Zárate
