--- a/_data/pageconfig/our-solutions.yml
+++ b/_data/pageconfig/our-solutions.yml
@@ -1,5 +1,5 @@
 tagline_intro: Our Solutions
-tagline_main: Unlock Your Organisations's Digital Transformation with AxOps™
+tagline_main: Unlock Your Organisations's Digital Transformation
 #site_url: https://localhost:4000
 site_url: https://axopstech.github.io
 members:
