--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -17,8 +17,8 @@ tagline_cta: Paying too much for too little? Need to modernise your systems? Con
 button_cta1_text: Solutions
 button_cta1_url: /our-solutions
 
-button_cta2_text: Let's Talk!
-button_cta2_url: /about-us/contact
+button_cta2_text: Technologies
+button_cta2_url: /supported-technologies
 
 above_the_fold_images:
   left-top: ./assets/img/photos/home/left-top-eriz.jpg
