--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -12,8 +12,8 @@ tagline_dynamic_delay: 100
 #tagline_cta: Paying too much for too little? Need a bespoke solution without the vendor lock-in? Considering the Cloud but lack the in-house expertise?
 #tagline_cta: Paying too much for too little? Need to modernise your data infrastructure? Considering the Cloud but lack the in-house expertise?
 #tagline_cta: Paying too much for too little? Need to modernise your organisation? Considering the Cloud but lack the in-house expertise?
-#tagline_cta: Paying too much for too little? Need to modernise your systems? Considering the Cloud but lack the in-house expertise?
-tagline_cta: Paying too much for too little? Need to modernise your systems? Considering the Cloud but lack the expertise?
+tagline_cta: Paying too much for too little? Need to modernise your systems? Considering the Cloud but lack the in-house expertise?
+#tagline_cta: Paying too much for too little? Need to modernise your systems? Considering the Cloud but lack the expertise?
 
 
 button_cat_text: Solutions
