updated site config and index yaml

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -1,4 +1,4 @@
-mode: live
+mode: maintenance
 #tagline_main: Make your business processes efficient,<br />
 #tagline_main: Accelerated Digital Transformation,<br />
 #tagline_main: Accelerated Digital Transformation,<br />
