updated cta vars in index yaml

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -16,11 +16,11 @@ tagline_dynamic_delay: 100
 #tagline_cta: Paying too much for too little? Need to modernise your systems? Considering the Cloud but lack the expertise?
 tagline_cta: Paying too much for too little? Need to modernise your IT systems? Considering the Cloud but lack the in-house expertise?
 
-button_cat_text: Solutions
+button_cta1_text: Solutions
 button_cta1_url: /our-solutions
 
-button_cta2_text: Let's Talk
-button_cta2_url: /about-us/contact
+button_cta2_text: Technologies
+button_cta2_url: /supported-technologies
 
 #button_cta2_text: Technologies
 #button_cta2_url: /supported-technologies
