minor edits to title creatives

--- a/_data/pageconfig/our-technologies.yml
+++ b/_data/pageconfig/our-technologies.yml
@@ -1,5 +1,5 @@
 tagline_intro: Supported Technologies
-tagline_main: Accelerate Innovation with AxOps™ Technologies
+tagline_main: Accelerate Innovation with AxOps™
 #site_url: https://localhost:4000
 site_url: https://axopstech.github.io
 members:
