updated solutions overview title

--- a/_data/pageconfig/our-solutions.yml
+++ b/_data/pageconfig/our-solutions.yml
@@ -1,4 +1,4 @@
-tagline_intro: Our Solutions
+tagline_intro: AxOps&#8482; Solutions
 tagline_main: Unlock Your Organisation's Digital Transformation
 #site_url: https://localhost:4000
 site_url: https://axopstech.github.io
