--- a/_data/pageconfig/technologies.yml
+++ b/_data/pageconfig/technologies.yml
@@ -1,5 +1,5 @@
+tagline_href: /supported-technologies
 pages:
-
   technologies-business-analytics.md:
     title: Business Analytics
     tagline: "Transform Insights into Impact: with AxOps&#8482 Business Analytics Solutions"
