--- a/_data/pageconfig/our-technology-consulting-solutions.yml
+++ b/_data/pageconfig/our-technology-consulting-solutions.yml
@@ -1,4 +1,5 @@
-tagline_intro: Our Solutions
+tagline_intro: Solutions
+tagline_here: Technology Consulting
 tagline_main: AxOps™ Technology Consulting
 #site_url: https://localhost:4000
 site_url: https://axopstech.github.io
