minor update to fix category navigation

--- a/_data/pageconfig/technologies.yml
+++ b/_data/pageconfig/technologies.yml
@@ -1,4 +1,4 @@
-tagline_href: /supported-technologies
+tagline_href: supported-technologies
 pages:
   technologies-business-analytics.md:
     title: Business Analytics
