--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -15,7 +15,8 @@ tagline_dynamic_delay: 100
 #tagline_cta: Paying too much for too little? Need to modernise your data infrastructure? Considering the Cloud but lack the in-house expertise?
 #tagline_cta: Paying too much for too little? Need to modernise your organisation? Considering the Cloud but lack the in-house expertise?
 #tagline_cta: Paying too much for too little? Need to modernise your systems? Considering the Cloud but lack the expertise?
-tagline_cta: Paying too much for too little? Need to modernise your IT systems? Considering the Cloud but lack the in-house expertise?
+#tagline_cta: Paying too much for too little? Need to modernise your IT systems? Considering the Cloud but lack the in-house expertise?
+tagline_cta: Paying more for less? Need to modernise your IT systems? Considering the Cloud but lack the in-house expertise?
 
 button_cta1_text: Solutions
 button_cta1_url: /our-solutions
